--- a/makemore_mlp.ipynb
+++ b/makemore_mlp.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMXz3I6UI9hYqQMaH959itC",
+      "authorship_tag": "ABX9TyOiXjJzQBSRgzNFCehOf8/n",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,6 +25,15 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/burakemretetik/makemore/blob/main/makemore_mlp.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## MLP"
+      ],
+      "metadata": {
+        "id": "SjxQSaRSz05D"
+      }
     },
     {
       "cell_type": "code",
@@ -51,7 +60,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "FRyGoWkZdEEt",
-        "outputId": "464e2957-4673-47d3-82d6-69ccdfceae2f"
+        "outputId": "3d1748b9-c61d-45dc-c936-7af32e09b3c7"
       },
       "execution_count": 2,
       "outputs": [
@@ -82,7 +91,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "02f61515-fda8-4e56-c437-5756b20ec0b7"
+        "outputId": "1d52d601-94ee-42e8-b2d3-8d26310b75f3"
       },
       "execution_count": 3,
       "outputs": [
@@ -122,9 +131,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "346f7eee-917b-4f31-d4de-18fa5ff79772"
+        "outputId": "8c3fa71e-82c5-44b5-8b79-2afc3abf2a32"
       },
-      "execution_count": 4,
+      "execution_count": 40,
       "outputs": [
         {
           "output_type": "stream",
@@ -186,9 +195,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "98d07370-286c-4532-a379-f6cce82df49c"
+        "outputId": "3ddff815-7177-4f6e-8f18-4614e8f15982"
       },
-      "execution_count": 20,
+      "execution_count": 41,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -198,7 +207,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 20
+          "execution_count": 41
         }
       ]
     },
@@ -216,22 +225,22 @@
       "metadata": {
         "id": "fzGOmu2xp5I8"
       },
-      "execution_count": 26,
+      "execution_count": 42,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "sum(p.nelement() for p in parameters)"
+        "sum(p.nelement() for p in parameters) # Numbers of parameters"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "uBNHYzNlmcf7",
-        "outputId": "61ed8bab-5954-4db2-edaf-4692c0fd3594"
+        "outputId": "09a45f05-83a5-40d0-ee52-7723a01a2e48"
       },
-      "execution_count": 27,
+      "execution_count": 43,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -241,39 +250,214 @@
             ]
           },
           "metadata": {},
-          "execution_count": 27
+          "execution_count": 43
         }
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "emb = C[X] #(32, 3, 2)\n",
-        "h = torch.tanh(emb.view(-1, 6) @ W1 + b1) # (32, 100)\n",
-        "logits = h @ W2 + b2\n",
-        "counts = logits.exp()\n",
-        "prob = counts / counts.sum(1, keepdims=True)\n",
-        "loss = -prob[torch.arange(32), Y].log().mean()\n",
-        "loss"
+        "for p in parameters:\n",
+        "    p.requires_grad = True"
+      ],
+      "metadata": {
+        "id": "H18sUc7IuL6V"
+      },
+      "execution_count": 45,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for _ in range(10):\n",
+        "  # Forward pass\n",
+        "  emb = C[X] #(32, 3, 2)\n",
+        "  h = torch.tanh(emb.view(-1, 6) @ W1 + b1) # (32, 100)\n",
+        "  logits = h @ W2 + b2 # h=(32,100) . W=(100,27)\n",
+        "  counts = logits.exp()\n",
+        "  prob = counts / counts.sum(1, keepdims=True)\n",
+        "  loss = -prob[torch.arange(32), Y].log().mean()\n",
+        "  print(loss.item())\n",
+        "\n",
+        "  # Backward pass\n",
+        "  for p in parameters:\n",
+        "      p.grad = None\n",
+        "  loss.backward()\n",
+        "\n",
+        "  # Update\n",
+        "  for p in parameters:\n",
+        "      p.data += -0.1 * p.grad"
       ],
       "metadata": {
         "id": "DJdyxNsaqVa2",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "111c5fa9-36c2-4c46-cc31-8a7221a5b0da"
+        "outputId": "8483c36b-0d57-4408-a3ca-f808b0b9bfa3"
       },
-      "execution_count": 28,
+      "execution_count": 47,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "3.985849618911743\n",
+            "3.6028316020965576\n",
+            "3.262141704559326\n",
+            "2.961381435394287\n",
+            "2.6982972621917725\n",
+            "2.4697132110595703\n",
+            "2.271660327911377\n",
+            "2.101283550262451\n",
+            "1.9571771621704102\n",
+            "1.8374860286712646\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Note: we're overfitting the model here (too few examples for a large dataset will result poor in the actual data)"
+      ],
+      "metadata": {
+        "id": "ZxSYsHd6z_Us"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Rebuild"
+      ],
+      "metadata": {
+        "id": "t_TOHlUHzyt9"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Rebuild the dataset (with full data)\n",
+        "\n",
+        "block_size = 3 # context length: how many characters do we take to predict the next one\n",
+        "X, Y = [], []\n",
+        "\n",
+        "for w in words:\n",
+        "    context = [0] * block_size\n",
+        "    for ch in w + \".\":\n",
+        "        ix = stoi[ch]\n",
+        "        X.append(context)\n",
+        "        Y.append(ix)\n",
+        "        context = context[1:] + [ix]\n",
+        "\n",
+        "X = torch.tensor(X)\n",
+        "Y = torch.tensor(Y)"
+      ],
+      "metadata": {
+        "id": "ZS1xYEelz7kr"
+      },
+      "execution_count": 52,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "X.shape, X.dtype, Y.shape, Y.dtype # Dataset"
+      ],
+      "metadata": {
+        "id": "-rN6pCLq0Pe-",
+        "outputId": "c409fcf0-5f4b-48b5-fbaa-b41a899e746d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 53,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "tensor(17.7697)"
+              "(torch.Size([228146, 3]), torch.int64, torch.Size([228146]), torch.int64)"
             ]
           },
           "metadata": {},
-          "execution_count": 28
+          "execution_count": 53
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Setup parameters\n",
+        "g = torch.Generator().manual_seed(2147483647)\n",
+        "C = torch.randn((27, 2), generator=g)\n",
+        "W1 = torch.randn((6, 100), generator=g)\n",
+        "b1 = torch.randn(100, generator=g)\n",
+        "W2 = torch.randn((100, 27), generator=g)\n",
+        "b2 = torch.randn(27, generator=g)\n",
+        "parameters = [C, W1, b1, W2, b2]"
+      ],
+      "metadata": {
+        "id": "YRVupgBz0Yh3"
+      },
+      "execution_count": 54,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for p in parameters:\n",
+        "    p.requires_grad = True"
+      ],
+      "metadata": {
+        "id": "kGWFLgV20mdh"
+      },
+      "execution_count": 55,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for _ in range(10):\n",
+        "  # Forward pass\n",
+        "  emb = C[X] #(32, 3, 2)\n",
+        "  h = torch.tanh(emb.view(-1, 6) @ W1 + b1) # (32, 100)\n",
+        "  logits = h @ W2 + b2 # h=(32,100) . W=(100,27)\n",
+        "  loss = F.cross_entropy(logits, Y)\n",
+        "  print(loss.item())\n",
+        "\n",
+        "  # Backward pass\n",
+        "  for p in parameters:\n",
+        "      p.grad = None\n",
+        "  loss.backward()\n",
+        "\n",
+        "  # Update\n",
+        "  for p in parameters:\n",
+        "      p.data += -0.1 * p.grad"
+      ],
+      "metadata": {
+        "id": "d80bMXdo1x6H",
+        "outputId": "a17838f3-a2f4-4185-db6d-84c08022f86d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 56,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "19.505226135253906\n",
+            "17.08449363708496\n",
+            "15.776531219482422\n",
+            "14.833340644836426\n",
+            "14.002603530883789\n",
+            "13.253260612487793\n",
+            "12.57991886138916\n",
+            "11.983101844787598\n",
+            "11.47049331665039\n",
+            "11.051856994628906\n"
+          ]
         }
       ]
     }
