Make the title bigger

--- a/makemore_mlp2.ipynb
+++ b/makemore_mlp2.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "name": "makemore_mlp2.ipynb",
-      "authorship_tag": "ABX9TyNr6OrsmfB5RpeyJjVKHROn",
+      "authorship_tag": "ABX9TyNaVRHeYfUZmfYOLK12wN22",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -275,7 +275,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## MLP 2: Batch Normalization"
+        "# MLP 2: Batch Normalization"
       ],
       "metadata": {
         "id": "SjxQSaRSz05D"
@@ -305,7 +305,7 @@
       "metadata": {
         "id": "19a2YjGLn4l1"
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -327,7 +327,7 @@
       "metadata": {
         "id": "zLbPrz4YiHHW"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -369,7 +369,7 @@
           "height": 607
         }
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
